<package format="2">
  <name>composable_node_demo</name>
  <version>0.0.1</version>
  <description>Composable Node Demo with pub, sub, and service using tf2.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>rclcpp_components</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>interfaces</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>